--- a/css/style.scss
+++ b/css/style.scss
@@ -165,6 +165,9 @@ a:active {
 	max-width: 163px;
 }
 
+.login-button {
+	float: right;
+}
 
 /*
 #   $$$$$$\                                                              $$\                           $$$$$$$\
